# libcgcef

./: Makefile.in  README  acconfig.h  cgc_executable_format.md  config.guess  config.h.in  configure  configure.in  libcgcef.pc.in  package.sh
debian/: changelog  control  copyright  libcgcef0.lintian-overrides  rules
lib/: 32.fsize.c  32.getehdr.c  32.getphdr.c  32.getshdr.c  32.newehdr.c  32.newphdr.c  32.xlatetof.c  64.xlatetof.c  Makefile.in  Makefile.w32  assert.c  begin.c  build.bat  byteswap.h  cgcef_repl.h  checksum.c  cntl.c  config.h.w32  cook.c  data.c  end.c  errmsg.c  errno.c  errors.h  ext_types.h  fill.c  flag.c  gcgcef.h  gcgcefehdr.c  gcgcefphdr.c  gcgcefshdr.c  gcgceftrans.c  getarhdr.c  getaroff.c  getarsym.c  getbase.c  getdata.c  getident.c  getscn.c  hash.c  (+31 more)
po/: Makefile.in  gmo2msg.c  libcgcef.pot
tests/: test_libcgcef.py
